# namable_closures

./: Cargo.toml  README.md
src/: closure_rec.rs  closures.rs  lib.rs  stable_fn.rs
